<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtCServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servico"
            android:textColor="@color/pressed"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerServico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        style="@style/btnStyleOrange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/txtCServicoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textColor="@color/pressed"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edtCServicoValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCadastrarServico"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/cadastarServico" />

        <Button
            android:id="@+id/btnVoltar"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/voltar" />
    </LinearLayout>

</LinearLayout>